# dvm-sys

./: .gitignore  CMakeLists.txt  arrcpy.DVMH.f  copyright  current.par  dvmbin  dvmbin.win  dvmclean  dvmclean.bat  dvmcleanall  dvmcleanall.bat  dvminstall  dvminstall.bat  makefile.uni  makefile.win  measure_onfly_dbg.sh  measure_pure.sh  measure_trccmp_dbg.sh  measure_trcwrt_dbg.sh  py.py  sts.gz+
cdvm/: makefile.uni  makefile.win
cdvmh/: CMakeLists.txt  README.md  git-svn-commit.sh  makefile.uni  makefile.win
cdvmh/analyzer/idb/src/base/: cell.h  cell_macros.h  declaration.h  exception.h  text.h  tree.h  utility.h  value.h
cdvmh/cmake/: utility.cmake
cdvmh/src/: CMakeLists.txt  across.cpp  aux_visitors.cpp  aux_visitors.h  c_dvmh.cpp  cdvmh_log.cpp  cdvmh_log.h  converter.h  converter_aux.cpp  converter_debug.cpp  converter_debug.h  converter_main.cpp  external_preprocessor.cpp  external_preprocessor.h  file_ctx.cpp  file_ctx.h  handler_gen.cpp  handler_gen.h  makefile.uni  makefile.win  messages.h  pass_ctx.cpp  pass_ctx.h  pragma_parser.cpp  pragma_parser.h  pragmas.cpp  pragmas.h  project_ctx.cpp  project_ctx.h  settings.h  utils.cpp  utils.h
demo/: dvm
driver/: makefile.uni  makefile.win
driver/src/: CMakeLists.txt  analyzePtxasCuda.cpp  dvm-completion.sh  dvm.bat.in  dvm_comp  dvm_doc  dvm_drv  dvm_drv.bat  dvm_help  dvm_help.txt  dvm_link  dvm_pred  dvm_run  dvm_run_nompi  dvm_settings.bat.in  dvm_settings.sh.win.in  dvm_test  dvm_utils.sh  dvm_ver  dvmcom  dvmcreate.bat  dvmdiff.c  dvmh_conv_include.cpp  dvmrun_cpp.bat  dvmrun_fm.bat  dvmrun_fm1.bat  dvmrun_mpich.bat  dvmrun_mpich2.bat  dvmrun_nt.bat  dvmrun_nt0.bat  dvmrun_nt1.bat  kiae.run  makefile.uni  makefile.win  mmm_prof.c  mpiexec.run  mpisubmit-dvm.pl  mvs10p.run  pbs.run  runmpi  (+8 more)
examples/: 1pred  1pred.bat  allcdemo  allcdemo.bat  alldemo  alldemo.bat  alldemo.uni  allpred  allpred.bat  alltest  alltest.bat  clean  clean.bat  demo_res.uni  demo_res.win  democ_res.uni  democ_res.win  gausf.fdv  gaush.hpf  gauss_c.cdv  gauss_wb.cdv  inst_alltest.bat  jac.fdv  jac1d.ptr  jac2d_perf.fdv  jac3d.cdv  jac3d_perf.cdv  jac3d_perf.fdv  (+18 more)
fdvm/InlineExpansion/: CMakeLists.txt  dvm_tag.h  hlp.cpp  inl_exp.cpp  inline.h  inliner.cpp  intrinsic.h  makefile.uni  makefile.win
fdvm/Sage/Sage++/: CMakeLists.txt  Makefile  libSage++.cpp  makefile.uni  makefile.win
fdvm/Sage/lib/newsrc/: CMakeLists.txt  Makefile  annotate.tab.c  annotate.tab.h  annotate.y  comments.c  low_level.c  makefile.uni  makefile.win  toolsann.c  unparse.c
fdvm/Sage/lib/oldsrc/: CMakeLists.txt  Makefile  anal_ind.c  db.c  db_unp.c  db_unp_comm.c  db_unp_vpc.c  dbutils.c  garb_coll.c  glob_anal.c  ker_fun.c  list.c  make_nodes.c  makefile.uni  makefile.win  mod_ref.c  ndeps.c  readnodes.c  sets.c  setutils.c  symb_alg.c  writenodes.c
fdvm/fdvm/: CMakeLists.txt  Makefile  acc.cpp  acc_across.cpp  acc_across_analyzer.cpp  acc_analyzer.cpp  acc_data.cpp  acc_f2c.cpp  acc_f2c_handlers.cpp  acc_index_analyzer.cpp  acc_rtc.cpp  acc_unused_code.cpp  acc_utilities.cpp  aks_analyzeLoops.cpp  aks_loopStructure.cpp  aks_structs.cpp  calls.cpp  checkpoint.cpp  debug.cpp  dvm.cpp  funcall.cpp  help.cpp  hpf.cpp  io.cpp  makefile.uni  makefile.win  omp.cpp  ompdebug.cpp  parloop.cpp  stmt.cpp
fdvm/parser/: CMakeLists.txt  Makefile  cftn.c  errors.c  facc.gram  fdvm.gram  fomp.gram  fspf.gram  ftn.gram  gram1.tab.c  gram1.tab.h  gram1.y  hash.c  init.c  lexfdvm.c  lists.c  low_hpf.c  makefile.uni  makefile.win  misc.c  stat.c  sym.c  tag.h  tokdefs.h  tokens  types.c  unparse_hpf.c
rts/: CMakeLists.txt  makefile.uni  makefile.win
rts/dvmh/: CMakeLists.txt  cuda_copying.cu  cuda_copying.h  cuda_device.cu  cuda_device.h  cuda_reduction.cu  cuda_reduction.h  cuda_transform.cu  cuda_transform.h  cuda_utils.h  distrib.cpp  distrib.h  dvmh.cpp  dvmh.h  dvmh2.cpp  dvmh2.h  dvmh_async.cpp  dvmh_async.h  dvmh_buffer.cpp  dvmh_buffer.h  dvmh_copying.cpp  dvmh_copying.h  dvmh_data.cpp  dvmh_data.h  dvmh_debug.cpp  dvmh_debug.h  dvmh_device.cpp  dvmh_device.h  dvmh_dictionary.h  dvmh_log.cpp  dvmh_log.h  dvmh_pieces.cpp  dvmh_pieces.h  dvmh_predictor.cpp  dvmh_predictor.h  dvmh_rtc.cpp  dvmh_rts.cpp  dvmh_rts.h  dvmh_stat.cpp  dvmh_stat.h  (+23 more)
rts/dvmh/Win/include/: pthread.h
rts/dvmh/include/: dvmhlib2_rename_iface.h  dvmhlib_block_red.h  dvmhlib_cuda.h  dvmhlib_device.h  dvmhlib_f2c.h  dvmhlib_stdio.h  dvmhlib_types.h
rts/include/: dvmh_events.def  dvmh_rts_stat.h  dvmh_stat.h  dvmlib.h  dvmvers.h  gns.h  trace.mac  user.def  user.typ  usrdebug.dec
rts/par/: Predictor.par  deb_dif.par  deb_err.par  sysdebug.deb  sysdebug.rel  syspar.rel  systrace.rel  trcevent.deb  trcevent.rel  usrdebug.deb
rts/src/: 1.c  1.cpp  2.c  2.cpp  3.c  3.cpp  4.c  4.cpp  5.c  5.cpp  6.c  6.cpp  7.c  7.cpp  8.c  8.cpp  9.c  9.cpp  CMakeLists.txt  _adler32.c  _adler32.cpp  _compress.c  _compress.cpp  _crc32.c  _crc32.cpp  _deflate.c  _deflate.cpp  _gzio.c  _gzio.cpp  _infblock.c  _infblock.cpp  _infcodes.c  _infcodes.cpp  _inffast.c  _inffast.cpp  _inflate.c  _inflate.cpp  _inftrees.c  _inftrees.cpp  _infutil.c  (+146 more)
rts/src/map_tasks/: CMakeLists.txt  Distribution.cpp  Distribution.h  Muzzle.cpp  MyException.h  NaiveDistribution.cpp  NaiveDistribution.h  ProcessorLoad.cpp  ProcessorLoad.h  Task.cpp  Task.h  TaskData.cpp  TaskData.h  TaskInfo.h  TransposedDistribution.cpp  TransposedDistribution.h  makefile.uni  makefile.win
tools/Zlib/src/: CMakeLists.txt  compress.c  deflate.c  gzio.c  infblock.c  infcodes.c  inffast.c  inflate.c  inftrees.c  infutil.c  trees.c  uncompr.c  zutil.c
tools/pppa/src/: CMakeLists.txt  LibraryImport.cpp  LibraryImport.h  bool.h  dvmh_stat.h  dvmvers.h.in  inter.cpp  inter.h  json.hpp  makefile.uni  makefile.win  makefileJnilib  potensyn.cpp  potensyn.h  stat.cpp  statfile.cpp  statinter.cpp  statinter.h  statist.h  statlist.cpp  statlist.h  statprintf.cpp  statprintf.h  statread.cpp  statread.h  strall.h  sysstat.h  treeinter.cpp  treeinter.h  ver.h
tools/pppa/src/PPPA/: PPPA.sln
tools/pppa/src/PPPA/PPPA/: PPPA.vcxproj  PPPA.vcxproj.filters
(+250 files in other folders)
